# Plasma-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  PlasmaEngine.sln  README.md
PlasmaEngine/: PlasmaEngine.vcxproj  PlasmaEngine.vcxproj.filters  config.h  engine.cpp  engine.h  instance.h  main.cpp
source/: Application.cpp  Application.h  main.cpp  pch.h
source/core/: Benchmark.hpp  CommandLineParser.hpp  Sample.cpp  Sample.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.h  VulkanSwapChain.h  VulkanTools.cpp  VulkanTools.h
source/platform/: Surface.cpp  Surface.h
source/platform/windows/: WindowSurface.cpp  WindowSurface.h
source/shaders/: basic.vert  compile.bat
source/vulkan_api/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Debugger.cpp  Debugger.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Vertex.cpp  Vertex.h  VertexBuffer.cpp  VertexBuffer.h
source/vulkan_api/synchronization/: Fence.cpp  Fence.h  Presenter.cpp  Presenter.h  Semaphore.cpp  Semaphore.h
